- 1. Sending indication for messages. 2. Fixed keyboard closing on message send on mobile devices.

--- a/src/App.css
+++ b/src/App.css
@@ -209,6 +209,15 @@ h1 {
   );
   background-attachment: fixed;
   position: relative;
+  opacity: 1;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+
+.bubble-dim {
+  opacity: 0.5;
 }
 /* End of Message Bubbles */
 
